--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -33,8 +33,8 @@
 				<h1>Herzlich Willkommen</h1>
 				<p>PLATZHALTER</p>
 				
-				<button type="button" class="btn btn-lg btn-primary"> <a href="/DailyChallenge-war/Login.jsp" style="color: #fff"/a> Anmelden</button>
-				<button type="button" class="btn btn-lg btn-primary"> <a href="/DailyChallenge-war/register.jsp" style="color: #fff"/a> Registrieren</button>
+                                <a class="btn btn-lg btn-primary" href="/DailyChallenge-war/Login.jsp" style="color: #fff"> Anmelden</a>
+				<a class="btn btn-lg btn-primary" href="/DailyChallenge-war/register.jsp" style="color: #fff"> Registrieren</a>
 			</div>
 		</div>
         
