Lu - bootstrap angepasst. index html navbar.

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.css" rel="stylesheet">
         <!-- Bootstrap theme -->
-        <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.css" rel="stylesheet">
         <!-- Logo in Navbar -->
         <link href="css/logo-nav.css" rel="stylesheet">
     </head>
@@ -16,14 +16,19 @@
     <body> 
         <!-- Navbar -->
         <nav class="navbar  navbar-default navbar-fixed-top">
-            <div class="container">
+            <div class="container" style="padding-left: 35px;">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="../index.html">DailyChallenge</a>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="images/pfeil.png" style="height: 50px; width: auto;">
+                    </a>
                 </div>
                 <div>
                     <ul class="nav navbar-nav">
-                        <li><a href=#>PLATZHALTER</a></li>
-                        <li><a href=#>PLATZHALTER</a></li> 
+                        <li><a href="/DailyChallenge-war/register.jsp" style="font-size: 18px; font-weight: bold; color: #3e84c0">Registrieren</a></li> 
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right" style="margin-right: 0px;">
+                        <li><a style="font-size: 18px; font-weight: bold;">Bereits Registriert?</a></li>
+                        <li><a href="/DailyChallenge-war/Login.jsp" style="font-size: 18px; font-weight: bold; color: #3e84c0">Anmelden!</a></li>
                     </ul>
                 </div>
             </div>
