Lu - Login Screen

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -15,7 +15,7 @@
 
     <body> 
         <!-- Navbar -->
-        <nav class="navbar  navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container" style="padding-left: 35px;">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">
@@ -27,7 +27,7 @@
                         <li><a href="/DailyChallenge-war/register.jsp" style="font-size: 18px; font-weight: bold; color: #3e84c0">Registrieren</a></li> 
                     </ul>
                     <ul class="nav navbar-nav navbar-right" style="margin-right: 0px;">
-                        <li><a style="font-size: 18px; font-weight: bold;">Bereits Registriert?</a></li>
+                        <li style="font-size: 18px; font-weight: bold; margin-top: 12px; color: #646464">Bereits Registriert?</li>
                         <li><a href="/DailyChallenge-war/Login.jsp" style="font-size: 18px; font-weight: bold; color: #3e84c0">Anmelden!</a></li>
                     </ul>
                 </div>
