Lu - startseite bastelei

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/Login-Error.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/Login-Error.html
@@ -6,12 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Bootstrap theme -->
-        <link href="css/bootstrap-theme.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap-theme.css" rel="stylesheet">
         <!-- Logo in Navbar -->
-        <link href="css/logo-nav.css" rel="stylesheet">
-
+        <link href="bootstrap/css/logo-nav.css" rel="stylesheet">
     </head>
     <body>
         <!-- Navbar -->
