--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -6,13 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Bootstrap theme -->
-        <link href="css/bootstrap-theme.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap-theme.css" rel="stylesheet">
         <!-- Logo in Navbar -->
-        <link href="css/logo-nav.css" rel="stylesheet">
+        <link href="bootstrap/css/logo-nav.css" rel="stylesheet">
+        <!-- Javbascript -->
+        <script src="bootstrap/javascript/jquery.js" type="text/javascript"></script>
+        <script src="bootstrap/javascript/bootstrap.js" type="text/javascript"></script>
     </head>
-
     <body> 
         <!-- Navbar -->
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -33,16 +35,47 @@
                 </div>
             </div>
         </nav>
-        
-         <!-- Inhalt -->
-        <div class="container">
-            <div class="jumbotron">
-                <h1>Herzlich Willkommen</h1>
-                <p>PLATZHALTER</p>
 
-                <a class="btn btn-lg btn-primary" href="/DailyChallenge-war/Login.jsp" style="color: #fff"> Anmelden</a>
-                <a class="btn btn-lg btn-primary" href="/DailyChallenge-war/register.jsp" style="color: #fff"> Registrieren</a>
-            </div>
+        <!-- Inhalt -->
+        <div class="container">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="http://placehold.it/1200x315" alt="...">
+                        <div class="carousel-caption">
+                            <h3>Bla</h3>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="http://placehold.it/1200x315" alt="...">
+                        <div class="carousel-caption">
+                            <h3>Bla²</h3>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="http://placehold.it/1200x315" alt="...">
+                        <div class="carousel-caption">
+                            <h3>Bla³</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span><img src="images/left.png" alt=""/></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span><img src="images/right.png" alt=""/></span>
+                </a>
+            </div> <!-- Carousel -->
         </div>
     </body>
 </html>
