--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/login_error.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/login_error.html
@@ -1,4 +1,3 @@
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
     <head>
@@ -28,31 +27,25 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right" style="margin-right: 0px;">
                         <li style="font-size: 18px; font-weight: bold; margin-top: 12px; color: #646464">Bereits Registriert?</li>
-                        <li><a href="/DailyChallenge-war/Login.jsp" style="font-size: 18px; font-weight: bold; color: #3e84c0">Anmelden!</a></li>
+                        <li><a href="/DailyChallenge-war/login.jsp" style="font-size: 18px; font-weight: bold; color: #3e84c0">Anmelden!</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <!-- Inhalt -->
         <div class="container">
-            <div class="jumbotron">
-                <h2 style="margin-left: 17%;">Gib deine Benutzerdaten ein!</h2>
-                <br>
-                <form class="form-horizontal" method="post" action="/DailyChallenge-war/mainservlet?step=anmelden">
-                    <div class="form-group">
-                        <label for="User" class="control-label col-xs-2">Benutzername:</label>
-                        <div class="col-xs-10">
-                            <input name="username" type="text" class="form-control" id="User" placeholder="Benutzname">  
-                        </div>
+            <div class="jumbotron" style="padding-top: 0px; padding-left: 0px; padding-bottom: 0px; padding-right: 0px;">
+                <div class="media">
+                    <span class="media-left">
+                        <img src="images/wrong.png" alt="" style="height:300px; width:300px">
+                    </span>
+                    <div class="media-body">
+                        <br><br><br><br><br>
+                        <p class="col-md-6"> Leider sind deine Benutzerdaten falsch!</p>
+                        <p class="col-md-1"> <a class="btn btn-lg btn-primary" href="/DailyChallenge-war/login.jsp">Zurück</a></p>
+                        <p class="col-md-6"> Du bist noch nicht registriert? </p>
+                        <p class="col-md-1"><a class="btn btn-lg btn-primary" href="/DailyChallenge-war/register.jsp"> Registrieren</a></p>
                     </div>
-                    <div class="form-group">
-                        <label for="Password" class="control-label col-xs-2">Passwort:</label>
-                        <div class="col-xs-10">
-                            <input name="userpassword" type="password" class="form-control" id="Password" placeholder="Passwort">  
-                        </div>
-                    </div>
-                    <p><input class="btn btn-lg btn-primary" type="submit" value="Anmelden" style="margin-left: 17%;"/></p>
-                </form>
+                </div>
             </div>
         </div>
     </body>
