Lu - error bild geändert

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/login_error.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/login_error.html
@@ -36,7 +36,7 @@
             <div class="jumbotron" style="padding-top: 0px; padding-left: 0px; padding-bottom: 0px; padding-right: 0px;">
                 <div class="media">
                     <span class="media-left">
-                        <img src="images/wrong.png" alt="" style="height:300px; width:300px">
+                        <img src="images/wrong.png" alt="" style="height:300px; width:300px;margin-top: 10px;margin-left: 10px;margin-bottom: 10px;">
                     </span>
                     <div class="media-body">
                         <br><br><br><br><br>
