Lu - index Zeugs

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -36,26 +36,27 @@
             </div>
         </nav>
 
-        <!-- Inhalt -->
+        <!-- Karrusell -->
         <div class="container">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
+
+                <!-- Indikatoren -->
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 </ol>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
+                <!-- Seiten -->
+                <div class="carousel-inner" style="height: 400px !important;">
                     <div class="item active">
-                        <img src="http://placehold.it/1200x315" alt="...">
-                        <div class="carousel-caption">
-                            <h3>Bla</h3>
-                        </div>
+                        <img src="images/logo.jpg" alt="...">
                     </div>
                     <div class="item">
-                        <img src="http://placehold.it/1200x315" alt="...">
+                        <div class="jumbotron" style="height: 400px;">
+                            <h1>Herzlichen Willkomen!</h1>
+                            <p>Hier kannsch Zeugs mache!</p>
+                        </div>
                         <div class="carousel-caption">
                             <h3>Bla²</h3>
                         </div>
@@ -68,14 +69,10 @@
                     </div>
                 </div>
 
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span><img src="images/left.png" alt=""/></span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span><img src="images/right.png" alt=""/></span>
-                </a>
-            </div> <!-- Carousel -->
+                <!-- Controls-->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"></a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"></a>
+            </div>
         </div>
     </body>
 </html>
