Lu - Index und mainpage

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -54,17 +54,14 @@
                     </div>
                     <div class="item">
                         <div class="jumbotron" style="height: 400px;">
-                            <h1>Herzlichen Willkomen!</h1>
-                            <p>Hier kannsch Zeugs mache!</p>
-                        </div>
-                        <div class="carousel-caption">
-                            <h3>Bla²</h3>
+                            <h1>Herzlichen Willkommen!</h1>
+                            <p></p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="http://placehold.it/1200x315" alt="...">
-                        <div class="carousel-caption">
-                            <h3>Bla³</h3>
+                        <div class="jumbotron" style="height: 400px;">
+                            <h1></h1>
+                            <p><a href="https://ayra.ch/augenkrebs/flash.asp">richtig Dope!</a></p>
                         </div>
                     </div>
                 </div>
