Lu - index Karusell texte

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -54,14 +54,14 @@
                     </div>
                     <div class="item">
                         <div class="jumbotron" style="height: 400px;">
-                            <h1>Herzlichen Willkommen!</h1>
-                            <p></p>
+                            <h1 style="text-align: center">Herzlich Willkommen!</h1>
+                            <h2 style="text-align: center">Bewältige jeden Tag neue Challenges</h2>
                         </div>
                     </div>
                     <div class="item">
                         <div class="jumbotron" style="height: 400px;">
-                            <h1></h1>
-                            <p><a href="https://ayra.ch/augenkrebs/flash.asp">richtig Dope!</a></p>
+                            <h1 style="text-align: center">Verbessere dich!</h1>
+                            <h2 style="text-align: center">in den verschiedensten Kategorien</h2>
                         </div>
                     </div>
                 </div>
