--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -29,7 +29,7 @@
                         <li><a href="/DailyChallenge-war/register.jsp" style="font-size: 18px; font-weight: bold; color: #3e84c0">Registrieren</a></li> 
                     </ul>
                     <ul class="nav navbar-nav navbar-right" style="margin-right: 0px;">
-                        <li style="font-size: 18px; font-weight: bold; margin-top: 12px; color: #646464">Bereits Registriert?</li>
+                        <li style="font-size: 18px; font-weight: bold; margin-top: 14px; color: #646464">Bereits Registriert?</li>
                         <li><a href="/DailyChallenge-war/login.jsp" style="font-size: 18px; font-weight: bold; color: #3e84c0">Anmelden!</a></li>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@
                 <!-- Seiten -->
                 <div class="carousel-inner" style="height: 400px !important;">
                     <div class="item active">
-                        <img src="images/logo.jpg" alt="...">
+                        <img src="images/daily_logo2.png" alt="...">
                     </div>
                     <div class="item">
                         <div class="jumbotron" style="height: 400px;">
@@ -66,9 +66,10 @@
                     </div>
                 </div>
 
-                <!-- Controls-->
+                <!-- Controls
                 <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"></a>
                 <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"></a>
+                -->
             </div>
         </div>
     </body>
