--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/login_error.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/login_error.html
@@ -33,19 +33,12 @@
             </div>
         </nav>
         <div class="container">
-            <div class="jumbotron" style="padding-top: 0px; padding-left: 0px; padding-bottom: 0px; padding-right: 0px;">
-                <div class="media">
-                    <span class="media-left">
-                        <img src="images/cross.png" alt="" style="height:300px; width:300px;margin-top: 10px;margin-left: 10px;margin-bottom: 10px;">
-                    </span>
-                    <div class="media-body">
-                        <br><br><br><br><br>
-                        <p class="col-md-6"> Leider sind deine Benutzerdaten falsch!</p>
-                        <p class="col-md-1"> <a class="btn btn-lg btn-primary" href="/DailyChallenge-war/login.jsp">Zurück</a></p>
-                        <p class="col-md-6"> Du bist noch nicht registriert? </p>
-                        <p class="col-md-1"><a class="btn btn-lg btn-primary" href="/DailyChallenge-war/register.jsp"> Registrieren</a></p>
-                    </div>
-                </div>
+            <div class="jumbotron">
+                <h1>Da lief was falsch!</h1>
+                <p> Leider sind deine Benutzerdaten falsch! 
+                    <a class="btn btn-lg btn-primary" href="/DailyChallenge-war/login.jsp" style="margin-left: 1%;">Zurück</a></p>
+                <p> Du bist noch nicht registriert?      
+                    <a class="btn btn-lg btn-primary" href="/DailyChallenge-war/register.jsp" style="margin-left: 10.5%;"> Registrieren</a></p>
             </div>
         </div>
     </body>
