Lu - Logo in Box ding

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -50,7 +50,9 @@
                 <!-- Seiten -->
                 <div class="carousel-inner" style="height: 400px !important;">
                     <div class="item active">
-                        <img src="images/daily_logo2.png" alt="...">
+                        <div class="jumbotron" style="height: 400px;">
+                            <img src="images/daily_logo2.png" alt="..." style="height:400px; width: auto">
+                        </div>
                     </div>
                     <div class="item">
                         <div class="jumbotron" style="height: 400px;">
