Lu - Logo in Box ding

--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/index.html
@@ -50,19 +50,19 @@
                 <!-- Seiten -->
                 <div class="carousel-inner" style="height: 400px !important;">
                     <div class="item active">
-                        <div class="jumbotron" style="height: 400px;">
-                            <img src="images/daily_logo2.png" alt="..." style="height:400px; width: auto">
+                        <div class="jumbotron" style="height:400px; padding-left:60px; padding-top:20px;">
+                            <img src="images/daily_logo2.png" alt="..." style="height:360px; width: auto">
                         </div>
                     </div>
                     <div class="item">
                         <div class="jumbotron" style="height: 400px;">
-                            <h1 style="text-align: center">Herzlich Willkommen!</h1>
+                            <h1 style="text-align: center;margin-top: 80px;">Herzlich Willkommen!</h1>
                             <h2 style="text-align: center">Bewältige jeden Tag neue Challenges</h2>
                         </div>
                     </div>
                     <div class="item">
                         <div class="jumbotron" style="height: 400px;">
-                            <h1 style="text-align: center">Verbessere dich!</h1>
+                            <h1 style="text-align: center;margin-top: 80px;">Verbessere dich!</h1>
                             <h2 style="text-align: center">in den verschiedensten Kategorien</h2>
                         </div>
                     </div>
