--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/web/login_error.html
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/web/login_error.html
@@ -32,6 +32,7 @@
                 </div>
             </div>
         </nav>
+        <!-- Fehlermeldung -->
         <div class="container">
             <div class="jumbotron">
                 <h1>Da lief was falsch!</h1>
